Fix an issue for Fixman 62's paper and include Zenodo information in the head

--- a/All.bib
+++ b/All.bib
@@ -6,8 +6,10 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: bd02acceebca1713ee73b6332d36e8f67e96e7f1
-% Date: 2023-11-17
+% Commit: 3b7223da3fdf85a81a8e968a733a49da2d434d27
+% Zenodo: https://zenodo.org/records/10143431
+% DOI:    10.5281/zenodo.10143431
+% Date:   2023-11-17
 % ---------------------------
 
 
@@ -11578,18 +11580,6 @@
 }
 @incollection{bourgain:02:on*1,
   author        = {Bourgain, J.},
-  title         = {On the distribution of {D}irichlet sums. {II}},
-  booktitle     = {Number theory for the millennium, {I} ({U}rbana, {IL}, 2000)},
-  pages         = {87--109},
-  publisher     = {A K Peters, Natick, MA},
-  year          = {2002},
-  isbn          = {1-56881-126-8},
-  mrclass       = {11M26},
-  mrnumber      = {1956220},
-  mrreviewer    = {Jerzy\ Kaczorowski}
-}
-@incollection{bourgain:02:on*2,
-  author        = {Bourgain, J.},
   title         = {On the spectrum of lattice {S}chr\"{o}dinger operators with deterministic potential},
   note          = {Dedicated to the memory of Thomas H. Wolff},
   journal       = {J. Anal. Math.},
@@ -11603,6 +11593,18 @@
   mrreviewer    = {David\ Damanik},
   doi           = {10.1007/BF02868469},
   url           = {https://doi.org/10.1007/BF02868469}
+}
+@incollection{bourgain:02:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the distribution of {D}irichlet sums. {II}},
+  booktitle     = {Number theory for the millennium, {I} ({U}rbana, {IL}, 2000)},
+  pages         = {87--109},
+  publisher     = {A K Peters, Natick, MA},
+  year          = {2002},
+  isbn          = {1-56881-126-8},
+  mrclass       = {11M26},
+  mrnumber      = {1956220},
+  mrreviewer    = {Jerzy\ Kaczorowski}
 }
 @article{bourgain:02:on*3,
   author        = {Bourgain, Jean},
@@ -14058,18 +14060,19 @@
 }
 @article{bourgain:84:on,
   author        = {Bourgain, J.},
-  title         = {On martingales transforms in finite-dimensional lattices with an appendix on the {$K$}-convexity constant},
-  journal       = {Math. Nachr.},
-  fjournal      = {Mathematische Nachrichten},
-  volume        = {119},
+  title         = {On bases in the disc algebra},
+  journal       = {Trans. Amer. Math. Soc.},
+  fjournal      = {Transactions of the American Mathematical Society},
+  volume        = {285},
   year          = {1984},
-  pages         = {41--53},
-  issn          = {0025-584X,1522-2616},
-  mrclass       = {47B37 (44A15 46B20 60G46)},
-  mrnumber      = {774175},
-  mrreviewer    = {D.\ L.\ Burkholder},
-  doi           = {10.1002/mana.19841190104},
-  url           = {https://doi.org/10.1002/mana.19841190104}
+  number        = {1},
+  pages         = {133--139},
+  issn          = {0002-9947,1088-6850},
+  mrclass       = {46J15 (46B15 46E15)},
+  mrnumber      = {748834},
+  mrreviewer    = {Jacques\ Mayer},
+  doi           = {10.2307/1999476},
+  url           = {https://doi.org/10.2307/1999476}
 }
 @inproceedings{bourgain:84:on*1,
   author        = {Bourgain, J.},
@@ -14085,19 +14088,18 @@
 }
 @article{bourgain:84:on*2,
   author        = {Bourgain, J.},
-  title         = {On bases in the disc algebra},
-  journal       = {Trans. Amer. Math. Soc.},
-  fjournal      = {Transactions of the American Mathematical Society},
-  volume        = {285},
+  title         = {On martingales transforms in finite-dimensional lattices with an appendix on the {$K$}-convexity constant},
+  journal       = {Math. Nachr.},
+  fjournal      = {Mathematische Nachrichten},
+  volume        = {119},
   year          = {1984},
-  number        = {1},
-  pages         = {133--139},
-  issn          = {0002-9947,1088-6850},
-  mrclass       = {46J15 (46B15 46E15)},
-  mrnumber      = {748834},
-  mrreviewer    = {Jacques\ Mayer},
-  doi           = {10.2307/1999476},
-  url           = {https://doi.org/10.2307/1999476}
+  pages         = {41--53},
+  issn          = {0025-584X,1522-2616},
+  mrclass       = {47B37 (44A15 46B20 60G46)},
+  mrnumber      = {774175},
+  mrreviewer    = {D.\ L.\ Burkholder},
+  doi           = {10.1002/mana.19841190104},
+  url           = {https://doi.org/10.1002/mana.19841190104}
 }
 @incollection{bourgain:84:propriete,
   author        = {Bourgain, Jean},
@@ -14125,18 +14127,6 @@
   mrreviewer    = {Colin\ C.\ Graham}
 }
 @incollection{bourgain:84:sur,
-  author        = {Bourgain, Jean},
-  title         = {Sur le minimum de certaines sommes de cosinus},
-  booktitle     = {Harmonic analysis: study group on translation-invariant {B}anach spaces},
-  series        = {Publ. Math. Orsay},
-  volume        = {84-1},
-  pages         = {Exp. No. 2, 7},
-  publisher     = {Univ. Paris XI, Orsay},
-  year          = {1984},
-  mrclass       = {11L03 (42A32)},
-  mrnumber      = {740713}
-}
-@incollection{bourgain:84:sur*1,
   author        = {Bourgain, J.},
   title         = {Sur l'approximation dans {$H^infty$}},
   booktitle     = {Seminar on the geometry of {B}anach spaces, {V}ol. {I}, {II} ({P}aris, 1983)},
@@ -14148,6 +14138,18 @@
   mrclass       = {30E10 (41A35 46J15)},
   mrnumber      = {781582},
   mrreviewer    = {Burglind\ J\"{o}ricke}
+}
+@incollection{bourgain:84:sur*1,
+  author        = {Bourgain, Jean},
+  title         = {Sur le minimum de certaines sommes de cosinus},
+  booktitle     = {Harmonic analysis: study group on translation-invariant {B}anach spaces},
+  series        = {Publ. Math. Orsay},
+  volume        = {84-1},
+  pages         = {Exp. No. 2, 7},
+  publisher     = {Univ. Paris XI, Orsay},
+  year          = {1984},
+  mrclass       = {11L03 (42A32)},
+  mrnumber      = {740713}
 }
 @incollection{bourgain:84:vector,
   author        = {Bourgain, J.},
@@ -14365,22 +14367,6 @@
 }
 @article{bourgain:86:on*1,
   author        = {Bourgain, J.},
-  title         = {On the {$L^p$}-bounds for maximal functions associated to convex bodies in {${\bf R}^n$}},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {54},
-  year          = {1986},
-  number        = {3},
-  pages         = {257--265},
-  issn          = {0021-2172},
-  mrclass       = {42B25},
-  mrnumber      = {853451},
-  mrreviewer    = {Roger\ L.\ Jones},
-  doi           = {10.1007/BF02764955},
-  url           = {https://doi.org/10.1007/BF02764955}
-}
-@article{bourgain:86:on*2,
-  author        = {Bourgain, J.},
   title         = {On the similarity problem for polynomially bounded operators on {H}ilbert space},
   journal       = {Israel J. Math.},
   fjournal      = {Israel Journal of Mathematics},
@@ -14394,6 +14380,22 @@
   mrreviewer    = {Vern\ Paulsen},
   doi           = {10.1007/BF02764943},
   url           = {https://doi.org/10.1007/BF02764943}
+}
+@article{bourgain:86:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the {$L^p$}-bounds for maximal functions associated to convex bodies in {${\bf R}^n$}},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {54},
+  year          = {1986},
+  number        = {3},
+  pages         = {257--265},
+  issn          = {0021-2172},
+  mrclass       = {42B25},
+  mrnumber      = {853451},
+  mrreviewer    = {Roger\ L.\ Jones},
+  doi           = {10.1007/BF02764955},
+  url           = {https://doi.org/10.1007/BF02764955}
 }
 @article{bourgain:86:on*3,
   author        = {Bourgain, J.},
@@ -14545,7 +14547,23 @@
   mrnumber      = {934289},
   mrreviewer    = {Alberto\ Torchinsky}
 }
-@article{bourgain:87:on,
+@incollection{bourgain:87:on,
+  author        = {Bourgain, J.},
+  title         = {On dimension free maximal inequalities for convex symmetric bodies in {${\bf R}^n$}},
+  booktitle     = {Geometrical aspects of functional analysis (1985/86)},
+  series        = {Lecture Notes in Math.},
+  volume        = {1267},
+  pages         = {168--176},
+  publisher     = {Springer, Berlin},
+  year          = {1987},
+  isbn          = {3-540-18103-2},
+  mrclass       = {42B25 (42B15)},
+  mrnumber      = {907693},
+  mrreviewer    = {Roger\ L.\ Jones},
+  doi           = {10.1007/BFb0078144},
+  url           = {https://doi.org/10.1007/BFb0078144}
+}
+@article{bourgain:87:on*1,
   author        = {Bourgain, J.},
   title         = {On the {H}ausdorff dimension of harmonic measure in higher dimension},
   journal       = {Invent. Math.},
@@ -14561,7 +14579,7 @@
   doi           = {10.1007/BF01389238},
   url           = {https://doi.org/10.1007/BF01389238}
 }
-@incollection{bourgain:87:on*1,
+@incollection{bourgain:87:on*2,
   author        = {Bourgain, J.},
   title         = {On lattice packing of convex symmetric sets in {${\bf R}^n$}},
   booktitle     = {Geometrical aspects of functional analysis (1985/86)},
@@ -14576,22 +14594,6 @@
   mrreviewer    = {J.\ M.\ Wills},
   doi           = {10.1007/BFb0078132},
   url           = {https://doi.org/10.1007/BFb0078132}
-}
-@incollection{bourgain:87:on*2,
-  author        = {Bourgain, J.},
-  title         = {On dimension free maximal inequalities for convex symmetric bodies in {${\bf R}^n$}},
-  booktitle     = {Geometrical aspects of functional analysis (1985/86)},
-  series        = {Lecture Notes in Math.},
-  volume        = {1267},
-  pages         = {168--176},
-  publisher     = {Springer, Berlin},
-  year          = {1987},
-  isbn          = {3-540-18103-2},
-  mrclass       = {42B25 (42B15)},
-  mrnumber      = {907693},
-  mrreviewer    = {Roger\ L.\ Jones},
-  doi           = {10.1007/BFb0078144},
-  url           = {https://doi.org/10.1007/BFb0078144}
 }
 @article{bourgain:87:on*3,
   author        = {Bourgain, Jean},
@@ -14720,23 +14722,7 @@
   doi           = {10.1007/BF02776302},
   url           = {https://doi.org/10.1007/BF02776302}
 }
-@article{bourgain:88:on*1,
-  author        = {Bourgain, J.},
-  title         = {On the maximal ergodic theorem for certain subsets of the integers},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {61},
-  year          = {1988},
-  number        = {1},
-  pages         = {39--72},
-  issn          = {0021-2172},
-  mrclass       = {28D05},
-  mrnumber      = {937581},
-  mrreviewer    = {Alberto\ de la Torre},
-  doi           = {10.1007/BF02776301},
-  url           = {https://doi.org/10.1007/BF02776301}
-}
-@incollection{bourgain:88:on*2,
+@incollection{bourgain:88:on*1,
   author        = {Bourgain, J.},
   title         = {On finite-dimensional homogeneous {B}anach spaces},
   booktitle     = {Geometric aspects of functional analysis (1986/87)},
@@ -14751,6 +14737,22 @@
   mrreviewer    = {T.\ Figiel},
   doi           = {10.1007/BFb0081744},
   url           = {https://doi.org/10.1007/BFb0081744}
+}
+@article{bourgain:88:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the maximal ergodic theorem for certain subsets of the integers},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {61},
+  year          = {1988},
+  number        = {1},
+  pages         = {39--72},
+  issn          = {0021-2172},
+  mrclass       = {28D05},
+  mrnumber      = {937581},
+  mrreviewer    = {Alberto\ de la Torre},
+  doi           = {10.1007/BF02776301},
+  url           = {https://doi.org/10.1007/BF02776301}
 }
 @article{bourgain:88:remark,
   author        = {Bourgain, J.},
@@ -15240,6 +15242,21 @@
 }
 @article{bourgain:93:on*2,
   author        = {Bourgain, J.},
+  title         = {On the distribution of {D}irichlet sums},
+  journal       = {J. Anal. Math.},
+  fjournal      = {Journal d'Analyse Math\'{e}matique},
+  volume        = {60},
+  year          = {1993},
+  pages         = {21--32},
+  issn          = {0021-7670,1565-8538},
+  mrclass       = {11M99 (28A75)},
+  mrnumber      = {1253227},
+  mrreviewer    = {D.\ R.\ Heath-Brown},
+  doi           = {10.1007/BF03341964},
+  url           = {https://doi.org/10.1007/BF03341964}
+}
+@article{bourgain:93:on*3,
+  author        = {Bourgain, J.},
   title         = {On the {C}auchy problem for the {K}adomtsev-{P}etviashvili equation},
   journal       = {Geom. Funct. Anal.},
   fjournal      = {Geometric and Functional Analysis},
@@ -15253,21 +15270,6 @@
   mrreviewer    = {Daniel\ B\"{a}ttig},
   doi           = {10.1007/BF01896259},
   url           = {https://doi.org/10.1007/BF01896259}
-}
-@article{bourgain:93:on*3,
-  author        = {Bourgain, J.},
-  title         = {On the distribution of {D}irichlet sums},
-  journal       = {J. Anal. Math.},
-  fjournal      = {Journal d'Analyse Math\'{e}matique},
-  volume        = {60},
-  year          = {1993},
-  pages         = {21--32},
-  issn          = {0021-7670,1565-8538},
-  mrclass       = {11M99 (28A75)},
-  mrnumber      = {1253227},
-  mrreviewer    = {D.\ R.\ Heath-Brown},
-  doi           = {10.1007/BF03341964},
-  url           = {https://doi.org/10.1007/BF03341964}
 }
 @article{bourgain:94:approximation,
   author        = {Bourgain, Jean},
@@ -18548,20 +18550,6 @@
 }
 @article{carmona.nualart:88:random,
   author        = {Carmona, Ren\'{e} and Nualart, David},
-  title         = {Random nonlinear wave equations: propagation of singularities},
-  journal       = {Ann. Probab.},
-  fjournal      = {The Annals of Probability},
-  volume        = {16},
-  year          = {1988},
-  number        = {2},
-  pages         = {730--751},
-  issn          = {0091-1798},
-  mrclass       = {60H15 (35L05 35R60)},
-  mrnumber      = {929075},
-  url           = {http://links.jstor.org/sici?sici=0091-1798(198804)16:2<730:RNWEPO>2.0.CO;2-D&origin=MSN}
-}
-@article{carmona.nualart:88:random*1,
-  author        = {Carmona, Ren\'{e} and Nualart, David},
   title         = {Random nonlinear wave equations: smoothness of the solutions},
   journal       = {Probab. Theory Related Fields},
   fjournal      = {Probability Theory and Related Fields},
@@ -18575,6 +18563,20 @@
   mrreviewer    = {M. Zakai},
   doi           = {10.1007/BF00318783},
   url           = {https://doi.org/10.1007/BF00318783}
+}
+@article{carmona.nualart:88:random*1,
+  author        = {Carmona, Ren\'{e} and Nualart, David},
+  title         = {Random nonlinear wave equations: propagation of singularities},
+  journal       = {Ann. Probab.},
+  fjournal      = {The Annals of Probability},
+  volume        = {16},
+  year          = {1988},
+  number        = {2},
+  pages         = {730--751},
+  issn          = {0091-1798},
+  mrclass       = {60H15 (35L05 35R60)},
+  mrnumber      = {929075},
+  url           = {http://links.jstor.org/sici?sici=0091-1798(198804)16:2<730:RNWEPO>2.0.CO;2-D&origin=MSN}
 }
 @book{carmona.nualart:90:nonlinear,
   author        = {Carmona, Ren\'{e} A. and Nualart, David},
@@ -25670,6 +25672,21 @@
 }
 @article{dawson.etheridge.ea:02:mutually,
   author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
+  title         = {Mutually catalytic branching in the plane: infinite measure states},
+  journal       = {Electron. J. Probab.},
+  fjournal      = {Electronic Journal of Probability},
+  volume        = {7},
+  year          = {2002},
+  pages         = {No. 15, 61},
+  issn          = {1083-6489},
+  mrclass       = {60K35 (60G57 60J80)},
+  mrnumber      = {1921744},
+  mrreviewer    = {Achim Klenke},
+  doi           = {10.1214/EJP.v7-114},
+  url           = {https://doi.org/10.1214/EJP.v7-114}
+}
+@article{dawson.etheridge.ea:02:mutually*1,
+  author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
   title         = {Mutually catalytic branching in the plane: finite measure states},
   journal       = {Ann. Probab.},
   fjournal      = {The Annals of Probability},
@@ -25683,21 +25700,6 @@
   mrreviewer    = {Roger Tribe},
   doi           = {10.1214/aop/1039548370},
   url           = {https://doi.org/10.1214/aop/1039548370}
-}
-@article{dawson.etheridge.ea:02:mutually*1,
-  author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
-  title         = {Mutually catalytic branching in the plane: infinite measure states},
-  journal       = {Electron. J. Probab.},
-  fjournal      = {Electronic Journal of Probability},
-  volume        = {7},
-  year          = {2002},
-  pages         = {No. 15, 61},
-  issn          = {1083-6489},
-  mrclass       = {60K35 (60G57 60J80)},
-  mrnumber      = {1921744},
-  mrreviewer    = {Achim Klenke},
-  doi           = {10.1214/EJP.v7-114},
-  url           = {https://doi.org/10.1214/EJP.v7-114}
 }
 @article{dawson.feng:01:large,
   author        = {Dawson, Donald A. and Feng, Shui},
@@ -30928,9 +30930,9 @@
   doi           = {10.1002/cpa.3160450703},
   url           = {https://doi.org/10.1002/cpa.3160450703}
 }
-@article{fixman:62:radius-of-gyration-of-polymer-chains,
+@article{fixman:62:radius,
   author        = {Fixman, Marshall},
-  title         = "{Radius of Gyration of Polymer Chains}",
+  title         = "Radius of Gyration of Polymer Chains",
   fjournal      = {The Journal of Chemical Physics},
   journal       = {J. Chem. Phys.},
   volume        = {36},
@@ -60951,22 +60953,6 @@
 }
 @article{seppalainen:93:large,
   author        = {Sepp\"{a}l\"{a}inen, Timo},
-  title         = {Large deviations for lattice systems. {I}. {P}arametrized independent fields},
-  journal       = {Probab. Theory Related Fields},
-  fjournal      = {Probability Theory and Related Fields},
-  volume        = {96},
-  year          = {1993},
-  number        = {2},
-  pages         = {241--260},
-  issn          = {0178-8051},
-  mrclass       = {60F10 (60G60)},
-  mrnumber      = {1227034},
-  mrreviewer    = {Francis Comets},
-  doi           = {10.1007/BF01192135},
-  url           = {https://doi.org/10.1007/BF01192135}
-}
-@article{seppalainen:93:large*1,
-  author        = {Sepp\"{a}l\"{a}inen, Timo},
   title         = {Large deviations for lattice systems. {II}. {N}onstationary independent fields},
   journal       = {Probab. Theory Related Fields},
   fjournal      = {Probability Theory and Related Fields},
@@ -60980,6 +60966,22 @@
   mrreviewer    = {Francis Comets},
   doi           = {10.1007/BF01199314},
   url           = {https://doi.org/10.1007/BF01199314}
+}
+@article{seppalainen:93:large*1,
+  author        = {Sepp\"{a}l\"{a}inen, Timo},
+  title         = {Large deviations for lattice systems. {I}. {P}arametrized independent fields},
+  journal       = {Probab. Theory Related Fields},
+  fjournal      = {Probability Theory and Related Fields},
+  volume        = {96},
+  year          = {1993},
+  number        = {2},
+  pages         = {241--260},
+  issn          = {0178-8051},
+  mrclass       = {60F10 (60G60)},
+  mrnumber      = {1227034},
+  mrreviewer    = {Francis Comets},
+  doi           = {10.1007/BF01192135},
+  url           = {https://doi.org/10.1007/BF01192135}
 }
 @article{seppalainen:94:large,
   author        = {Sepp\"{a}l\"{a}inen, Timo},
